text-overflow:ellipsis is not applied when the block contains nested blocks https://bugs.webkit.org/show_bug.cgi?id=101879

Patch by Bem Jones-Bey <bjonesbe@adobe.com> on 2013-02-22
Reviewed by Eric Seidel.

Source/WebCore:

Since text-overflow is not an inherited property, the anonymous blocks
don't know they should ellipse. This causes the anonymous blocks
created in the nested block situation to check their parent to find
out if they should ellipse.

Test: fast/css/text-overflow-ellipsis-anonymous-blocks.html

* rendering/RenderBlockLineLayout.cpp:
(WebCore::RenderBlock::layoutInlineChildren):

LayoutTests:

Use the test from the specification that is supplied as part of the
bug.

* fast/css/text-overflow-ellipsis-anonymous-blocks-expected.html: Added.
* fast/css/text-overflow-ellipsis-anonymous-blocks.html: Added.

Canonical link: https://commits.webkit.org/128889@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@143754 268f45cc-cd09-0410-ab3c-d52691b4dbfc